--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Reset and Base Styles */
+
 * {
   margin: 0;
   padding: 0;
@@ -11,8 +11,48 @@ body {
   color: #ffffff;
   min-height: 100vh;
 }
+.main-name {
+  font-size: 2.2rem;
+  color: #ccc;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 1rem;
+}
 
-/* Container Layout */
+.highlighted-name {
+  color: #fff;
+  font-size: 3rem;
+  font-weight: 900;
+  text-shadow: 0 0 10px #a874ff, 0 0 20px #864ff8;
+}
+
+.rotating-roles {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #fff;
+  text-align: center;
+  min-height: 40px;
+}
+
+.role-text {
+  display: inline-block;
+  overflow: hidden;
+  border-right: 2px solid #fff;
+  white-space: nowrap;
+  animation: typing 3s steps(40, end), blink 0.75s step-end infinite;
+}
+
+@keyframes typing {
+  from { width: 0; }
+  to { width: 100%; }
+}
+
+@keyframes blink {
+  from, to { border-color: transparent; }
+  50% { border-color: white; }
+}
+
+
 .container {
   display: flex;
   flex-direction: row;
@@ -37,7 +77,6 @@ body {
   object-fit: cover;
 }
 
-/* Sidebar */
 .sidebar {
   width: 250px;
   padding: 2rem;
@@ -825,7 +864,7 @@ style>
 }
 
 .social-links a:hover {
-  color: #a874ff; 
+  color: hsl(262, 100%, 73%); 
   transform: scale(1.2);
   filter: drop-shadow(0 0 5px #a874ff);
 }
@@ -851,4 +890,63 @@ textarea::-moz-placeholder {
 input:-ms-input-placeholder,
 textarea:-ms-input-placeholder {
   color: rgba(255, 255, 255, 0.5);
+}
+.skills-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.skill-card {
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  border-radius: 20px;
+  padding: 20px;
+  width: 120px;
+  height: 120px;
+  text-align: center;
+  box-shadow: 0 4px 15px rgba(255, 255, 255, 0.1);
+  transition: 0.3s ease;
+  position: relative;
+}
+
+.skill-card img {
+  width: 50px;
+  height: 50px;
+  object-fit: contain;
+  filter: drop-shadow(0 0 6px rgba(0, 255, 255, 0.6));
+  transition: 0.3s;
+}
+
+.skill-card span {
+  display: block;
+  margin-top: 10px;
+  color: #fff;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+.skill-card:hover img {
+  filter: drop-shadow(0 0 12px rgba(0, 255, 255, 0.9));
+  transform: scale(1.1);
+}
+.glass-box {
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 20px;
+  backdrop-filter: blur(10px);
+  box-shadow:
+    0 0 25px rgba(0, 174, 255, 0.4),
+    0 0 60px rgba(0, 174, 255, 0.2);
+  padding: 2rem;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+#home, #about {
+  background: rgba(255, 255, 255, 0.1); 
+  border-radius: 20px;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 0 30px rgba(0, 174, 255, 0.6);  /* اینجا ; اضافه شد */
+  padding: 2rem;
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
